[Extensions] Don't store logs in the error console

The error console shows errors that were reported across all the
different contexts an extension runs in (e.g., content scripts,
background pages, etc). It should ignore logs, though, so as to
avoid being overly noisy. Keep reporting warnings for now.

Add a unittest for the same.

Bug: 837401
Change-Id: I4a0d89f85f2cfd31f2cb3a29051b8598bd78fafc
Reviewed-on: https://chromium-review.googlesource.com/1043156
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Commit-Queue: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556232}
Former-commit-id: 5bc471caffeecea5f1b4b2d4fa99c58520571949