extensions/common/constants.h
@@ -6,6 +6,7 @@
 #define EXTENSIONS_COMMON_CONSTANTS_H_
 
 #include "base/files/file_path.h"
+#include "base/logging.h"
 #include "ui/base/layout.h"
 
 namespace extensions {
@@ -239,6 +240,9 @@ extern const char kPolicyBlockedScripting[];
 
 // The default block size for hashing used in content verification.
 extern const int kContentVerificationDefaultBlockSize;
+
+// The minimum severity of a log or error in order to report it to the browser.
+extern const logging::LogSeverity kMinimumSeverityToReportError;
 
 }  // namespace extension_misc
 
