extensions/renderer/extensions_render_frame_observer.cc
@@ -10,6 +10,7 @@
 #include "base/strings/utf_string_conversions.h"
 #include "content/public/renderer/render_frame.h"
 #include "content/public/renderer/render_view.h"
+#include "extensions/common/constants.h"
 #include "extensions/common/extension_messages.h"
 #include "extensions/common/stack_frame.h"
 #include "third_party/blink/public/web/web_local_frame.h"
@@ -111,6 +112,12 @@ void ExtensionsRenderFrameObserver::DetailedConsoleMessageAdded(
     const base::string16& stack_trace_string,
     uint32_t line_number,
     int32_t severity_level) {
+  if (severity_level <
+      static_cast<int32_t>(extension_misc::kMinimumSeverityToReportError)) {
+    // We don't report certain low-severity errors.
+    return;
+  }
+
   base::string16 trimmed_message = message;
   StackTrace stack_trace = GetStackTraceFromMessage(
       &trimmed_message,
